src/test/deca/syntax/valid/null/null_assignment.deca
// Description:
//    Tests a syntactically correct program for assigning null to a variable
//
// Results:
//    No errors.
//
// History:
//    created on 07/01/2025

{
    Object a = null;
}